[gd_scene load_steps=12 format=3 uid="uid://dwkc5wmw8xdys"]

[ext_resource type="Script" path="res://scripts/monster.gd" id="1_yn3rx"]
[ext_resource type="Texture2D" uid="uid://jaids3c7c755" path="res://assets/graphics/eye_enemy.png" id="2_bsqqy"]
[ext_resource type="FontFile" uid="uid://c1onid02yugm0" path="res://assets/fonts/clacon2.ttf" id="3_hykr5"]
[ext_resource type="AudioStream" uid="uid://b2wa11isrupj0" path="res://assets/sounds/alarm.wav" id="4_kkc7j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8vui"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfj5x"]
bg_color = Color(0, 1, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1

[sub_resource type="Animation" id="Animation_2gm04"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 256)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.04898, 4.04898)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AlarmSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rnwc8"]
resource_name = "attack"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.11, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 9, 8, 35, 26, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3.8, 3.8), Vector2(5, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AlarmSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_glu3f"]
resource_name = "damaged"
length = 0.22
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(960, 252), Vector2(980, 252), Vector2(940, 252), Vector2(960, 252), Vector2(980, 252), Vector2(940, 252), Vector2(980, 252), Vector2(940, 252), Vector2(960, 252), Vector2(980, 252), Vector2(940, 252), Vector2(980, 252)]
}

[sub_resource type="Animation" id="Animation_2fhdq"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 252)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.8, 4.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vk3q8"]
_data = {
"RESET": SubResource("Animation_2gm04"),
"attack": SubResource("Animation_rnwc8"),
"damaged": SubResource("Animation_glu3f"),
"idle": SubResource("Animation_2fhdq")
}

[node name="Monster" type="Node"]
script = ExtResource("1_yn3rx")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(960, 256)
scale = Vector2(4.04898, 4.04898)
texture = ExtResource("2_bsqqy")
hframes = 8
vframes = 5
frame = 16

[node name="AttackLabel" type="Label" parent="."]
offset_left = 576.0
offset_top = 324.0
offset_right = 1344.0
offset_bottom = 447.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = ExtResource("3_hykr5")
theme_override_font_sizes/font_size = 41
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 832.0
offset_top = 140.0
offset_right = 1088.0
offset_bottom = 164.0
theme_override_styles/background = SubResource("StyleBoxFlat_k8vui")
theme_override_styles/fill = SubResource("StyleBoxFlat_bfj5x")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="Animation" type="AnimationPlayer" parent="."]
speed_scale = 0.6
libraries = {
"": SubResource("AnimationLibrary_vk3q8")
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 13.0

[node name="AlarmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kkc7j")
mix_target = 2

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
